--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ body {
 
 header {
   background: rgb(54, 51, 51);
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
 
 .mycontainer {
@@ -24,7 +24,7 @@ header {
 }
 
 .header {
-  padding-top: 3%;
+  /* padding-top: 3%; */
   overflow: hidden;
 }
 
@@ -39,8 +39,8 @@ header {
   float: right;
   height: 100px;
   border-radius: 50%;
-  position: relative;
-  bottom: 30px;
+  /* position: relative; */
+  /* bottom: 30px; */
 }
 
 .headerh1 {
@@ -77,15 +77,14 @@ header {
 }
 
 .store {
-  /* display: flex; */
-  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  width: 80%;
   justify-content: center;
-  justify-items: center;
   flex-wrap: wrap;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  margin-bottom: 30px;
+  gap: 40px;
+  /* margin-bottom: 30px; */
+  /* border: 3px blue solid; */
 }
 
 .hcard {
@@ -152,12 +151,14 @@ header {
     width: 70%;
   }
   .header {
-    padding-top: 10%;
+    padding-top: 1%;
     padding-right: 2%;
-    height: 140px;
+    padding-bottom: 10px;
+    /* height: 140px; */
   }
   .headLogo {
-    height: 80px;
+    height: 70px;
+    /* padding-left: 3px; */
   }
   .headNav {
     left: 5%;
@@ -183,5 +184,17 @@ header {
   .footNav {
     display: inline-flex;
     flex-direction: column;
+  }
+}
+@media (max-width:480) {
+    .header {
+    padding-top: 10%;
+    padding-right: 2%;
+    padding-bottom: 25px;
+    /* height: 140px; */
+  }
+  .headLogo {
+    height: 70px;
+    padding-left: 3px;
   }
 }
