--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,11 +89,32 @@ td {
 
 tbody tr:nth-child(odd) {
   background-color: #f2f2f2;
+  /* border: solid blue 4px; */
 }
 
 thead {
   background-color: #333;
   color: white;
+}
+.amountTh{
+  width: 70px;
+}
+.amount{
+  direction: ltr;
+  /* text-align: center; */
+  display: flex;
+  justify-content: space-between;
+  width: 70px;
+}
+.plusMinusBtn{
+  border: #333 1px solid;
+}
+.plusMinusBtn:hover{
+  /* border: #333 1px solid; */
+  background: rgba(145, 136, 136, 0.322);
+}
+.plusMinusBtn:active{
+  scale: 0.98;
 }
 .btnDelete {
   color: white;
@@ -194,6 +215,10 @@ thead {
 .categoryBtn:hover {
   background-color: white;
   color: black;
+}
+.plusMinusBtn:hover{
+  /* border: #333 1px solid; */
+  background: white;
 }
   
 }
