--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,7 +29,7 @@
   font-weight: bold;
   cursor: pointer;
 }
-.cTitle:hover{
+.cTitle:hover {
   text-decoration: underline;
 }
 .cCategory {
@@ -70,7 +70,7 @@
 .homeIcons {
   font-size: 700%;
 }
-.selectCatrgory{
+.selectCatrgory {
   margin: 5px;
   border-radius: 10px;
   border: #333 solid 1px;
@@ -96,24 +96,24 @@ thead {
   background-color: #333;
   color: white;
 }
-.amountTh{
+.amountTh {
   width: 70px;
 }
-.amount{
+.amount {
   direction: ltr;
   /* text-align: center; */
   display: flex;
   justify-content: space-between;
   width: 70px;
 }
-.plusMinusBtn{
+.plusMinusBtn {
   border: #333 1px solid;
 }
-.plusMinusBtn:hover{
+.plusMinusBtn:hover {
   /* border: #333 1px solid; */
   background: rgba(145, 136, 136, 0.322);
 }
-.plusMinusBtn:active{
+.plusMinusBtn:active {
   scale: 0.98;
 }
 .btnDelete {
@@ -189,7 +189,7 @@ thead {
   flex-direction: column;
   text-align: center;
 }
-.mNav{
+.mNav {
   text-align: center;
   font-weight: bold;
   font-size: medium;
@@ -201,24 +201,68 @@ thead {
 .mNavLink:hover {
   text-decoration: underline;
 }
-.mNavActiv{
+.mNavActiv {
   text-decoration: underline;
 }
 .marketNav {
-    display: inline-flex;
-    gap: 10px;
-    border: black 3px solid;
-    border-radius: 40px;
-    padding: 3px;
+  display: inline-flex;
+  gap: 10px;
+  border: black 1px solid;
+  border-radius: 10px;
+  padding: 10px;
+}
+.order {
+  border: black solid 3px;
+  width: 60%;
+  height: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 5px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: relative;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  pointer-events: all;
+}
+.orderOverlay {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: default;
+}
+.exitBtn {
+  color: white;
+  background: red;
+  padding-left: 6px;
+  padding-right: 6px;
+  border-radius: 50%;
+  border: none;
+  position: absolute;
+  top: 0;
+  right: 5px;
+  font-size: 10px;
+  margin: 4px;
+}
+.exitBtn:active {
+  transform: scale(0.98);
 }
 @media (max-width: 768px) {
-.categoryBtn:hover {
-  background-color: white;
-  color: black;
-}
-.plusMinusBtn:hover{
-  /* border: #333 1px solid; */
-  background: white;
-}
-  
+  .categoryBtn:hover {
+    background-color: white;
+    color: black;
+  }
+  .plusMinusBtn:hover {
+    /* border: #333 1px solid; */
+    background: white;
+  }
 }
